YUK-10123 Voltage Regulator can be deleted even if it is assigned to a zone
-small review changes